--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -9,30 +9,39 @@
 </head>
 <body>
     <div id="container">
-        <div id="nav">
-            <div class="link">
+        <ul id="nav">
+            <li class="link">
                 <a href="">Gmail</a>
-            </div>
-            <div class="link">
+            </li>
+            <li class="link">
                 <a href="">Imagenes</a>
-            </div>
-            <div class="menu">
+            </li>
+            <li class="menu">
                 <a href="">
                     <svg class="gb_Xe" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg>
                 </a>
-            </div>
-            <div class="avatar">
+            </li>
+            <li class="avatar">
                 <img src="https://lh3.googleusercontent.com/ogw/ADGmqu8tSON5OyQ6BKxnANLrtHjrwYV27BDugc3e0FU1x0A=s32-c-mo">
-            </div>
-        </div>
+            </li>
+        </ul>
         <div id="logo">
             <img class="logo" src="http://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
         </div>
         <div id="search-form">
             <form>
-                <div id="search-box">
-                    <input type="text">
+                <div id="search-group">
+                    <div id="search-glass">
+                        <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
+                    </div>                        
+                    <div id="search-input">
+                        <input type="text">
+                    </div>
+                    <div id="search-voice">
+                        <svg class="HPVvwb" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z" fill="#4285f4"></path><path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path><path d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z" fill="#f4b400"></path><path d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z" fill="#ea4335"></path></svg>
+                    </div>
                 </div>
+                
                 
                 <div id="buttons">
                     <input type="button" value="Buscar con Google">
@@ -40,11 +49,23 @@
                 </div>
             </form>
         </div>
-        <div id="footer">
+        <div id="language">
             Ofrecido por Google en:  
             <a href="">English</a>
             <a href="">Quechua</a>
         </div>
+        <ul id="footer-1">
+            <li>Perú</li>
+        </ul>
+        <ul id="footer-2">
+            <li class="footer-left"><a href="">Sobre Google</a></li>
+            <li class="footer-left"><a href="">Publicidad</a></li>
+            <li class="footer-left"><a href="">Negocios</a></li>
+            <li class="footer-left"><a href="">Como funciona la Busqueda</a></li>
+            <li class="footer-right"><a href="">Privacidad</a></li>
+            <li class="footer-right"><a href="">Condiciones</a></li>
+            <li class="footer-right"><a href="">Preferencias</a></li>
+        </ul>
     </div>
 
 </body>
